--- a/CST211-Lab1-Test/CST211-Lab1-Test.vcxproj.filters
+++ b/CST211-Lab1-Test/CST211-Lab1-Test.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="CST211-Lab1-Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Exception.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Exception.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
